@@ -180,7 +180,7 @@ sub ITER_HAS_CHILD {
 	isa_ok ($list, "CustomList", "ITER_HAS_CHILD");
 	ok ($iter->[0] == $list->{stamp}, "ITER_HAS_CHILD");
 
-	return FALSE;
+	return 'asdf';
 }
 
 sub ITER_N_CHILDREN {
@@ -374,7 +374,7 @@ isa_ok ($iter = $model->iter_children(undef), "Gtk2::TreeIter");
 isa_ok ($path = $model->get_path ($iter), "Gtk2::TreePath");
 is_deeply ([$path->get_indices], [0]);
 
-is ($model->iter_has_child ($iter), FALSE);
+is ($model->iter_has_child ($iter), TRUE);
 is ($model->iter_n_children ($iter), 0);
 
 isa_ok ($iter = $model->iter_nth_child (undef, 7), "Gtk2::TreeIter");
